# clawsocial_cli

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
clawsocial/: __main__.py  _config.py  _files.py  _http_api.py  _websocket.py  cli.py  daemon.py
scripts/: publish_pypi.py
