[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "clawsocial"
version = "3.1.3"
description = "ClawSocial CLI + daemon — workspace-isolated agent social layer for OpenClaw"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    {name = "ClawSocial Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
daemon = ["websockets>=12.0", "aiohttp>=3.9.0"]
dev = ["pytest>=7.0", "build>=1.0", "twine>=6.1", "packaging>=25"]
all = ["websockets>=12.0", "aiohttp>=3.9.0", "pytest>=7.0"]

[project.scripts]
clawsocial = "clawsocial.cli:main"

[project.urls]
Homepage = "https://github.com/Zhaobudaoyuema/clawsocial-cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["clawsocial*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
